# ultimate-book-library

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  find_isbn_script.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/: books.json  generate_books.py  generate_seed.py  generate_seed_batch10.py  generate_seed_batch11.py  generate_seed_batch12.py  generate_seed_batch13.py  generate_seed_batch14.py  generate_seed_batch15.py  generate_seed_batch16.py  generate_seed_batch17.py  generate_seed_batch18.py  generate_seed_batch19.py  generate_seed_batch2.py  generate_seed_batch20.py  generate_seed_batch21.py  generate_seed_batch22.py  generate_seed_batch23.py  generate_seed_batch24.py  generate_seed_batch25.py  generate_seed_batch26.py  generate_seed_batch27.py  generate_seed_batch28.py  generate_seed_batch29.py  generate_seed_batch3.py  generate_seed_batch30.py  generate_seed_batch31.py  generate_seed_batch32.py  generate_seed_batch33.py  generate_seed_batch34.py  generate_seed_batch35.py  generate_seed_batch4.py  generate_seed_batch5.py  generate_seed_batch6.py  generate_seed_batch7.py  generate_seed_batch8.py  generate_seed_batch9.py
data/batches/: batch_01_literary_fiction.json  batch_02_scifi.json  batch_03_fantasy.json  batch_04_thriller_detective.json  batch_05_science.json  batch_06_politics_history.json  batch_07_cinema_art_music.json  (+140 more)
tests/: conftest.py  test_api.py  test_cleaning.py  test_cli.py  test_database.py  test_isbn_lookup.py  test_openlibrary.py  test_schema.py  test_validation.py  test_web.py
(+17 files in other folders)
