[project]
name = "ultimate-book-library"
version = "0.1.0"
description = "A curated collection of the best books in the world, with tools to find, enrich, and manage book data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
booklib = "ultimate_book_library.cli:app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio[trio]>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8.0",
    "pre-commit>=4.0",
    "responses>=0.25.0",
    "ultimate-book-library[api]",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["ultimate_book_library"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
